[package]
name = "elfo"
version = "0.2.0-alpha.20"
description = "An asynchronous distributed actor framework with robust observability"
keywords = ["elfo", "actor", "distributed", "tokio", "observability"]

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
full = ["elfo-configurer", "elfo-logger", "elfo-dumper", "elfo-telemeter", "elfo-pinger"]
test-util = ["elfo-test", "elfo-core/test-util", "elfo-configurer?/test-util"]
network = ["elfo-network"]
unstable = ["elfo-core/unstable", "elfo-telemeter?/unstable", "elfo-test?/unstable" ]
unstable-stuck-detection = ["elfo-core/unstable-stuck-detection"]
tracing-log = ["elfo-logger?/tracing-log"]
turmoil06 = ["elfo-network?/turmoil06"]
turmoil07 = ["elfo-network?/turmoil07"]

[dependencies]
elfo-core = { version = "=0.2.0-alpha.20", path = "../elfo-core" }
elfo-macros = { version = "=0.2.0-alpha.20", path = "../elfo-macros" }
elfo-test = { version = "=0.2.0-alpha.20", path = "../elfo-test", optional = true }
elfo-configurer = { version = "=0.2.0-alpha.20", path = "../elfo-configurer", optional = true }
elfo-logger = { version = "=0.2.0-alpha.20", path = "../elfo-logger", optional = true }
elfo-telemeter = { version = "=0.2.0-alpha.20", path = "../elfo-telemeter", optional = true }
elfo-dumper = { version = "=0.2.0-alpha.20", path = "../elfo-dumper", optional = true }
elfo-pinger = { version = "=0.2.0-alpha.20", path = "../elfo-pinger", optional = true }
elfo-network = { version = "=0.2.0-alpha.20", path = "../elfo-network", optional = true }

[dev-dependencies]
elfo-test = { version = "=0.2.0-alpha.20", path = "../elfo-test" }

metrics.workspace = true
toml.workspace = true
derive_more.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
libc.workspace = true
thread_local.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
serde.workspace = true
tracing.workspace = true
anyhow = "1.0.38"
static_assertions = "1.1.0"
futures-intrusive = "0.5"
turmoil = "0.7"
trybuild = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
