[package]
name = "elfo-examples"
version = "0.0.0"
publish = false

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[features]
unstable = ["elfo/unstable", "elfo-telemeter/unstable"]

[dev-dependencies]
elfo = { path = "../elfo", features = ["full", "network", "test-util"] }
elfo-telemeter = { path = "../elfo-telemeter" } # for `AllocatorStats`

tokio = { workspace = true, features = ["full"] }
metrics.workspace = true
toml.workspace = true
anyhow = "1.0.40"
futures = "0.3.12"
serde = { version = "1.0.120", features = ["derive"] }
derive_more = "0.99.11"
humantime-serde = "1"
tracing = "0.1.25"
