[package]
name = "elfo-examples"
version = "0.0.0"
publish = false

repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
elfo = { path = "../elfo", features = ["full"] }
elfo-telemeter = { path = "../elfo-telemeter" } # for `AllocatorStats`

tokio = { workspace = true, features = ["full", "tracing"] }
console-subscriber = "0.5.0"
metrics.workspace = true
toml.workspace = true
derive_more.workspace = true
futures.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1.0.40"
humantime-serde = "1"

[features]
test-util = ["elfo/test-util"]
network = ["elfo/network"]
tokio-tracing = ["elfo/tokio-tracing"]
unstable = ["elfo/unstable"]

[[bin]]
name = "usage"
path = "usage/main.rs"

[[bin]]
name = "stream"
path = "stream.rs"

[[bin]]
name = "network"
path = "network/main.rs"
required-features = ["network"]

[[bin]]
name = "test"
path = "test.rs"
required-features = ["test-util"]

[[bin]]
name = "tokio_console"
path = "tokio_console.rs"
required-features = ["tokio-tracing"]

[[bin]]
name = "tokio_broadcast"
path = "tokio_broadcast.rs"
